fix(sds/material): prevent fields to overlap their container
OUI-3515

--- a/projects/sds/src/app/code-examples/code-examples/form/previews/states/form-example-states-preview.component.scss
+++ b/projects/sds/src/app/code-examples/code-examples/form/previews/states/form-example-states-preview.component.scss
@@ -33,4 +33,8 @@
 	@include layout.ob-media-breakpoint-up(xl) {
 		max-width: 22%;
 	}
+
+	form {
+		width: 100%;
+	}
 }
